[package]
name = "rua"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
bytes = "1"

[dev-dependencies]
clonesure = "0.3.0"
rua-random = { path = "../plugin/util/random" }