[package]
name = "rua-tungstenite"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rua = { path = "../../../rua" }
rua-macro = { path = "../../../macro" }
tokio = { version = "1.12.0", features = ["full"] }
tokio-tungstenite = "*"
futures-util = "0.3.17"
bytes = "1"
