[package]
name = "rua-random"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rua = { path = "../../../rua" }
rua-macro = { path = "../../../macro" }
tokio = { version = "1.12.0", features = ["full"] }
bytes = "1"
rand = "0.8.4"

[dev-dependencies]
clonesure = "0.3.0"
